// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PrayerRequest resolver creates a new prayer 1`] = `
Object {
  "data": Object {
    "addPrayer": Object {
      "firstName": "Isaac",
      "id": "PrayerRequest:4ca828e6155e88cd21a8b67865472a9301e9f68a0e3823859d5a383958bc6c5b843f7453855c22c6f07f5955b5ca0bd1",
      "text": "Pray this works.",
    },
  },
}
`;

exports[`PrayerRequest resolver flags a prayer request 1`] = `
Object {
  "data": Object {
    "flagPrayer": Object {
      "firstName": "Isaac",
      "id": "PrayerRequest:4ca828e6155e88cd21a8b67865472a9301e9f68a0e3823859d5a383958bc6c5b843f7453855c22c6f07f5955b5ca0bd1",
      "text": "Pray this works.",
    },
  },
}
`;

exports[`PrayerRequest resolver gets all prayers from current person 1`] = `
Object {
  "data": Object {
    "userPrayers": Array [
      Object {
        "firstName": "Isaac",
        "id": "PrayerRequest:4ca828e6155e88cd21a8b67865472a9301e9f68a0e3823859d5a383958bc6c5b843f7453855c22c6f07f5955b5ca0bd1",
        "text": "Pray this works.",
      },
      Object {
        "firstName": "Rich",
        "id": "PrayerRequest:04fbd6bf8d5ee1a6493f42615e65ea05bb9ce2844192b00af611268daee3297d6e00b42b4ceebbb632956536f1cb00f3",
        "text": "Help me",
      },
    ],
  },
}
`;

exports[`PrayerRequest resolver gets all prayers from groups 1`] = `
Object {
  "data": Object {
    "groupPrayers": Array [
      Object {
        "firstName": "Isaac",
        "id": "PrayerRequest:4ca828e6155e88cd21a8b67865472a9301e9f68a0e3823859d5a383958bc6c5b843f7453855c22c6f07f5955b5ca0bd1",
        "text": "Pray this works.",
      },
      Object {
        "firstName": "Rich",
        "id": "PrayerRequest:04fbd6bf8d5ee1a6493f42615e65ea05bb9ce2844192b00af611268daee3297d6e00b42b4ceebbb632956536f1cb00f3",
        "text": "Help me",
      },
    ],
  },
}
`;

exports[`PrayerRequest resolver gets all public prayer requests 1`] = `
Object {
  "data": Object {
    "prayers": Array [
      Object {
        "campus": Object {
          "id": "16",
          "name": "Anderson",
        },
        "categoryId": 2,
        "firstName": "Isaac",
        "flagCount": 0,
        "id": "PrayerRequest:4ca828e6155e88cd21a8b67865472a9301e9f68a0e3823859d5a383958bc6c5b843f7453855c22c6f07f5955b5ca0bd1",
        "isAnonymous": true,
        "lastName": "Hardy",
        "person": Object {
          "firstName": "Isaac",
          "id": "1",
          "lastName": "Hardy",
        },
        "prayerCount": 4,
        "requestedByPersonAliasId": 447217,
        "text": "Pray this works.",
      },
      Object {
        "campus": Object {
          "id": "16",
          "name": "Anderson",
        },
        "categoryId": 2,
        "firstName": "Rich",
        "flagCount": 0,
        "id": "PrayerRequest:04fbd6bf8d5ee1a6493f42615e65ea05bb9ce2844192b00af611268daee3297d6e00b42b4ceebbb632956536f1cb00f3",
        "isAnonymous": true,
        "lastName": "Dubee",
        "person": Object {
          "firstName": "Isaac",
          "id": "1",
          "lastName": "Hardy",
        },
        "prayerCount": 4,
        "requestedByPersonAliasId": 447217,
        "text": "Help me",
      },
    ],
  },
}
`;

exports[`PrayerRequest resolver gets all public prayer requests by campus 1`] = `
Object {
  "data": Object {
    "campusPrayers": Array [
      Object {
        "campus": Object {
          "id": "16",
          "name": "Anderson",
        },
        "firstName": "Isaac",
        "id": "PrayerRequest:4ca828e6155e88cd21a8b67865472a9301e9f68a0e3823859d5a383958bc6c5b843f7453855c22c6f07f5955b5ca0bd1",
        "text": "Pray this works.",
      },
      Object {
        "campus": Object {
          "id": "16",
          "name": "Anderson",
        },
        "firstName": "Rich",
        "id": "PrayerRequest:04fbd6bf8d5ee1a6493f42615e65ea05bb9ce2844192b00af611268daee3297d6e00b42b4ceebbb632956536f1cb00f3",
        "text": "Help me",
      },
    ],
  },
}
`;

exports[`PrayerRequest resolver increments prayed for a request 1`] = `
Object {
  "data": Object {
    "incrementPrayerCount": Object {
      "firstName": "Isaac",
      "id": "PrayerRequest:4ca828e6155e88cd21a8b67865472a9301e9f68a0e3823859d5a383958bc6c5b843f7453855c22c6f07f5955b5ca0bd1",
      "text": "Pray this works.",
    },
  },
}
`;
